<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/pictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/take_picture"
                    app:layout_constraintEnd_toEndOf="@+id/addReminderButton"
                    app:layout_constraintStart_toStartOf="@+id/addReminderButton"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderButton" />

                <EditText
                    android:id="@+id/addNoteEditTextMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="@string/note_"
                    android:gravity="start|top"
                    android:hint="@string/note_"
                    android:inputType="textMultiLine"
                    android:maxHeight="200dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/note"
                    app:layout_constraintStart_toStartOf="@+id/addTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/addTitleEditText" />

                <TextView
                    android:id="@+id/addTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/title"
                    app:layout_constraintBottom_toBottomOf="@+id/addTitleEditText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/addTitleEditText" />

                <EditText
                    android:id="@+id/addTitleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="@string/title_"
                    android:hint="@string/title_"
                    android:inputType="textPersonName"
                    android:maxLength="38"
                    android:maxLines="1"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/addTitleTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/addReminderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/set_reminder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addNoteEditTextMultiLine" />

                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/preview"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/pictureButton"
                    app:layout_constraintStart_toStartOf="@+id/pictureButton"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderButton" />

                <TextView
                    android:id="@+id/addReminderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="@+id/addReminderButton"
                    app:layout_constraintEnd_toEndOf="@+id/addReminderButton"
                    app:layout_constraintStart_toStartOf="@+id/addReminderButton"
                    app:layout_constraintTop_toTopOf="@+id/addReminderButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>