<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/reminderTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/fullNoteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="14dp"
                android:justificationMode="inter_word"
                android:scrollbars="vertical"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/noteImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/note_image"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/takenOnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/taken_on"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reminderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reminder"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/takenOnTextView"
        app:layout_constraintStart_toStartOf="@+id/takenOnTextView" />

    <TextView
        android:id="@+id/dialogTakenOnTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/takenOnTextView"
        app:layout_constraintStart_toEndOf="@+id/takenOnTextView"
        app:layout_constraintTop_toTopOf="@+id/takenOnTextView" />

    <TextView
        android:id="@+id/dialogReminderTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/reminderTextView"
        app:layout_constraintStart_toStartOf="@+id/dialogTakenOnTimestamp"
        app:layout_constraintTop_toTopOf="@+id/reminderTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>